* Clock combining algorithm improvements from Dave Mills.
* [Bug 1642] ntpdsim can't find simulate block in config file.
(4.2.7p55) 2010/09/22 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* [Bug 1636] from 4.2.6p3-RC2: segfault after denied remote config.
(4.2.7p54) 2010/09/21 Released by Harlan Stenn <stenn@ntp.org>
* More Initial convergence improvements from Dave Mills.
* Documentation updates from Dave Mills.
* [Bug 1635] from 4.2.6p3-RC2: "filegen ... enable" is not default.
(4.2.7p53) 2010/09/20 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* More Initial convergence improvements from Dave Mills.
(4.2.7p52) 2010/09/19 Released by Harlan Stenn <stenn@ntp.org>
* Initial convergence improvements from Dave Mills.
(4.2.7p51) 2010/09/18 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1344] from 4.2.6p3-RC1: ntpd on Windows exits without logging
  cause.
* [Bug 1629] 4.2.7p50 configure.ac changes invalidate config.cache.
* [Bug 1630] 4.2.7p50 cannot bootstrap on Autoconf 2.61.
(4.2.7p50) 2010/09/16 Released by Harlan Stenn <stenn@ntp.org>
* Cleanup NTP_LIB_M.
* [Bug 1628] Clean up -lxnet/-lsocket usage for (open)solaris.
(4.2.7p49) 2010/09/13 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.7p48) 2010/09/12 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.7p47) 2010/09/11 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* [Bug 1588] finish configure --disable-autokey implementation.
* [Bug 1616] refclock_acts.c: if (pp->leap == 2) is always false.
* [Bug 1620] [Backward Incompatible] "discard minimum" value should be in
  seconds, not log2 seconds.
(4.2.7p46) 2010/09/10 Released by Harlan Stenn <stenn@ntp.org>
* Use AC_SEARCH_LIBS instead of AC_CHECK_LIB for NTP_LIB_M.
(4.2.7p45) 2010/09/05 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1578] Consistently use -lm when needed.